[CHANGE] Comment formatting fixes

--- a/cognitis.ipynb
+++ b/cognitis.ipynb
@@ -10,18 +10,18 @@
     "```\n",
     "https://czb-tabula-muris-senis.s3-us-west-2.amazonaws.com/Data-objects/tabula-muris-senis-facs-official-raw-obj.h5ad\n",
     "```\n",
-    "Pre-processed as  \n",
+    "**Pre-processed** as  \n",
     "- RNA counts normalized to 1.0 per cell\n",
     "- Cells with < 5 non-zero RNA types are discarded\n",
     "\n",
-    "Cell statistics are calculated on subsets defined by a cartesian product of  \n",
+    "Cell **statistics** are calculated on subsets defined by a cartesian product of  \n",
     "- Animal sex\n",
     "- Tissue type\n",
     "- Subtissue type\n",
     "- Cell type\n",
     "\n",
     "The largest found fold-changes in count between 3m and 24m age groups are reported in the table.  \n",
-    "Fold-changes are filtered as  \n",
+    "**Fold-changes** are filtered as  \n",
     "- Subset has >= 3 cells\n",
     "- Mean count are >= 4 max(std. dev) apart\n",
     "- RNA percentage is >= 1e-8 in both age groups"
@@ -613,7 +613,7 @@
    "source": [
     "## Split by age\n",
     "As seen in the table above, top age for males and females is different.  \n",
-    "To avoid mixing the age groups, the analysis is done only for the highest available age - for 24m males."
+    "To avoid mixing the age groups, the analysis is done only for the highest available age - for **24m males**."
    ]
   },
   {
@@ -654,7 +654,7 @@
    "metadata": {},
    "source": [
     "## Split into subsets\n",
-    "And calculate expression mean and std. dev for each one"
+    "And calculate expression **mean** and **std. dev** for each one"
    ]
   },
   {
@@ -718,7 +718,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compute differences in expression"
+    "## Compute fold-changes in expression"
    ]
   },
   {
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
     "\n",
     "matplotlib.rc('font', **font)\n",
     "\n",
-    "# fig, ax = plt.subplots(figsize=(8, 20))\n",
+    "# fig, ax = plt.subplots(figsize=(8, 40))\n",
     "# ax.barh(\n",
     "#   np.arange(n_max), \n",
     "#   diff_arr[ordered_diff_idxs]\n",
