[FIX] Typos and comment ambiguities

--- a/cognitis.ipynb
+++ b/cognitis.ipynb
@@ -1106,6 +1106,7 @@
     }
    ],
    "source": [
+    "# Preview cell-counts in the subsets\n",
     "data_grouped = age_group['obs'].groupby(subset_names)\n",
     "data_grouped.agg(['count']).head(20)\n",
     "# data_grouped.groups"
@@ -1346,6 +1347,7 @@
    ],
    "source": [
     "def build_results(diffs, confidences, means, stds, dataset_id, start_age, end_age, gene_names, n_top=100):\n",
+    "  \"\"\"Sort the resulting differences and arrange 'em into a DataFrame with metadata\"\"\"\n",
     "  # Python 3 dicts are ordered, be cool\n",
     "  diff_arr = np.stack(list(diffs.values()), axis=0)\n",
     "  confidence_arr = np.stack(list(confidences.values()), axis=0)\n",
@@ -1398,6 +1400,7 @@
     "\n",
     "\n",
     "def results2markdown(results):\n",
+    "  \"\"\"Format DataFrame as a markdown table for in-Jupyter output\"\"\"\n",
     "  # Generate Markdown table of the results\n",
     "  nl = '\\n'\n",
     "  md_table = \\\n",
