--- a/cognitis.ipynb
+++ b/cognitis.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Exploration of Mus Musculus aging dynamics\n",
     "On the [Tabula Muris Senis](https://github.com/czbiohub/tabula-muris-senis) dataset.  \n",
-    "Data is raw RNA-seq counts\n",
+    "Data is raw RNA-seq counts from\n",
     "```\n",
     "https://czb-tabula-muris-senis.s3-us-west-2.amazonaws.com/Data-objects/tabula-muris-senis-facs-official-raw-obj.h5ad\n",
     "```\n",
@@ -23,7 +23,7 @@
     "\n",
     "<br/>\n",
     "\n",
-    "Cell **statistics** are calculated on subsets defined by a unique combination of  \n",
+    "Cell **statistics** (expression mean and std.dev) are calculated on subsets defined by a unique combination of  \n",
     "- Animal sex\n",
     "- Tissue type\n",
     "- Subtissue type\n",
@@ -31,10 +31,9 @@
     "\n",
     "<br/>\n",
     "\n",
-    "The largest found fold-changes in count between 3m and 24m age groups are reported in the table.  \n",
-    "**Fold-changes** are filtered as  \n",
+    "Expression **fold-changes** computed between subsets of the pairs of age groups are filtered as  \n",
     "- Subset has >= 3 cells\n",
-    "- Mean count are >= 4 max(std. dev) apart\n",
+    "- Mean expression values are >= 4 max(std. dev) apart\n",
     "- RNA percentage is >= 1e-12 in both age groups\n",
     "\n",
     "<br/>\n",
