[FIX] Removed old figure from the readme

--- a/cognitis.ipynb
+++ b/cognitis.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "<br/>\n",
     "\n",
-    "Cell **statistics** (expression mean and std.dev) are calculated on subsets defined by a unique combination of  \n",
+    "Cell **statistics** (expression mean and std.dev) are calculated - with 4 levels of granularity - on subsets defined by a unique combination of  \n",
     "- Animal sex\n",
     "- Tissue type\n",
     "- Subtissue type\n",
