[FIX] Proper NaNs in 'merged.csv'

--- a/cognitis.ipynb
+++ b/cognitis.ipynb
@@ -1475,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -1597,6 +1597,7 @@
    ],
    "source": [
     "merged_results = pd.concat(all_results.values(), sort=False) \\\n",
+    "  .replace('nan', np.NaN) \\\n",
     "  .sort_values(['subtissue', 'cell_ontology_class'], na_position='first') \\\n",
     "  .drop_duplicates(\n",
     "    subset=['dataset', 'start_age', 'end_age', 'sex', 'tissue', 'gene', 'fold_change_log2'],\n",
