[ADD] Daphnia homolog resolution

--- a/videns.ipynb
+++ b/videns.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,6 +574,466 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import xml.etree.ElementTree as ET\n",
+    "from lxml import etree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mouse_gene2uniprot = {}\n",
+    "with open('../data/uniprot_sprot.xml', 'rb') as f:\n",
+    "  context = etree.iterparse(\n",
+    "    '../data/uniprot_sprot.xml', \n",
+    "    events=(\"end\",), \n",
+    "    tag=\"{http://uniprot.org/uniprot}entry\"\n",
+    "  )\n",
+    "  for action, elem in context:\n",
+    "    if action == 'end':\n",
+    "#       print(\"%s: %s\" % (action, elem.tag))\n",
+    "      organism = elem.findall('{http://uniprot.org/uniprot}organism')[0] \\\n",
+    "            .findall('{http://uniprot.org/uniprot}name')[0].text.strip()\n",
+    "      if not 'mus musculus' in organism.lower():\n",
+    "        # Memory cleanup\n",
+    "        elem.clear()\n",
+    "        for ancestor in elem.xpath('ancestor-or-self::*'):\n",
+    "            while ancestor.getprevious() is not None:\n",
+    "                del ancestor.getparent()[0]\n",
+    "        continue\n",
+    "      accession = elem.findall('{http://uniprot.org/uniprot}accession')[0].text.strip()\n",
+    "      if len(elem.findall('{http://uniprot.org/uniprot}gene')) < 1:\n",
+    "        continue\n",
+    "      gene_name = elem.findall('{http://uniprot.org/uniprot}gene')[0] \\\n",
+    "            .findall('{http://uniprot.org/uniprot}name')[0].text.strip()\n",
+    "      mouse_gene2uniprot[gene_name] = accession\n",
+    "      \n",
+    "      # Memory cleanup\n",
+    "      elem.clear()\n",
+    "      for ancestor in elem.xpath('ancestor-or-self::*'):\n",
+    "            while ancestor.getprevious() is not None:\n",
+    "                del ancestor.getparent()[0]\n",
+    "              \n",
+    "#       print('Frog virus 3' in organism)\n",
+    "#       print(elem.xpath('.//name', namespaces=context.nsmap))\n",
+    "#       print(etree.tostring(elem))\n",
+    "#       break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16628"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mouse_gene2uniprot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lineage</th>\n",
+       "      <th>Daphnia pulex</th>\n",
+       "      <th>Mus musculus</th>\n",
+       "      <th>CS</th>\n",
+       "      <th>EL</th>\n",
+       "      <th>Trees</th>\n",
+       "      <th>phylome</th>\n",
+       "      <th>ensembl</th>\n",
+       "      <th>orthomcl</th>\n",
+       "      <th>treefam</th>\n",
+       "      <th>eggnog</th>\n",
+       "      <th>hogenom</th>\n",
+       "      <th>daphnia</th>\n",
+       "      <th>mouse</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GO         E9HRC7</td>\n",
+       "      <td>GO         Q922V4</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.00/5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>E9HRC7</td>\n",
+       "      <td>Q922V4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GO         E9GF52</td>\n",
+       "      <td>GO         Q3U3J3</td>\n",
+       "      <td>0.714</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.60/5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>E9GF52</td>\n",
+       "      <td>Q3U3J3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GO         E9HAK4</td>\n",
+       "      <td>GO         Q3U1N2</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.00/2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>E9HAK4</td>\n",
+       "      <td>Q3U1N2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GO         E9G2Y1</td>\n",
+       "      <td>GO         S4R1P5</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>E9G2Y1</td>\n",
+       "      <td>S4R1P5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GO         E9FSN2</td>\n",
+       "      <td>GO         Q8CFE4</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.00/5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>E9FSN2</td>\n",
+       "      <td>Q8CFE4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Lineage      Daphnia pulex       Mus musculus     CS  EL  Trees  phylome  \\\n",
+       "0      NaN  GO         E9HRC7  GO         Q922V4  1.000   3      7      NaN   \n",
+       "1      NaN  GO         E9GF52  GO         Q3U3J3  0.714   3      7      NaN   \n",
+       "2      NaN  GO         E9HAK4  GO         Q3U1N2  1.000   3      4      NaN   \n",
+       "3      NaN  GO         E9G2Y1  GO         S4R1P5  1.000   1      1      NaN   \n",
+       "4      NaN  GO         E9FSN2  GO         Q8CFE4  1.000   3      7      NaN   \n",
+       "\n",
+       "  ensembl orthomcl  treefam eggnog  hogenom daphnia   mouse  \n",
+       "0     NaN   1.00/5      NaN    NaN      NaN  E9HRC7  Q922V4  \n",
+       "1     NaN   0.60/5      NaN    NaN      NaN  E9GF52  Q3U3J3  \n",
+       "2     NaN   1.00/2      NaN    NaN      NaN  E9HAK4  Q3U1N2  \n",
+       "3     NaN      NaN      NaN    NaN      NaN  E9G2Y1  S4R1P5  \n",
+       "4     NaN   1.00/5      NaN    NaN      NaN  E9FSN2  Q8CFE4  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_merged = pd.read_csv('./results/merged.csv')\n",
+    "daphnia2mouse = pd.read_csv('../data/MetaPhOrs-daphnia2mouse.csv')\n",
+    "daphnia2mouse[\"daphnia\"] = daphnia2mouse[\"Daphnia pulex\"].map(lambda g: g.replace('GO', '').strip())\n",
+    "daphnia2mouse[\"mouse\"] = daphnia2mouse[\"Mus musculus\"].map(lambda g: g.replace('GO', '').strip())\n",
+    "daphnia2mouse.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for index, row in results_merged.iterrows():\n",
+    "  if not row['gene'] in mouse_gene2uniprot:\n",
+    "    continue\n",
+    "  gene_name = mouse_gene2uniprot[row['gene']]\n",
+    "  results_merged.loc[index, 'uniprot_mouse'] = gene_name\n",
+    "  \n",
+    "  homolog_match = daphnia2mouse[daphnia2mouse[\"mouse\"] == gene_name]\n",
+    "  if len(homolog_match) < 1:\n",
+    "    continue\n",
+    "  if homolog_match.iloc[0][\"EL\"] < 2:\n",
+    "    # Low number of supporting data sources\n",
+    "    continue\n",
+    "  homolog = homolog_match.iloc[0][\"daphnia\"]\n",
+    "  if homolog.startswith('M!'):\n",
+    "    # Not a proper Uniprot id\n",
+    "    continue\n",
+    "#   print(gene_name)\n",
+    "#   print(homolog)\n",
+    "  results_merged.loc[index, 'uniprot_daphnia'] = homolog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>start_age</th>\n",
+       "      <th>end_age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>tissue</th>\n",
+       "      <th>subtissue</th>\n",
+       "      <th>cell_ontology_class</th>\n",
+       "      <th>gene</th>\n",
+       "      <th>fold_change_log2</th>\n",
+       "      <th>expression_at_start_age</th>\n",
+       "      <th>expression_at_end_age</th>\n",
+       "      <th>expression_max_std_dev</th>\n",
+       "      <th>p_value</th>\n",
+       "      <th>uniprot_mouse</th>\n",
+       "      <th>uniprot_daphnia</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>19245</td>\n",
+       "      <td>5</td>\n",
+       "      <td>droplet</td>\n",
+       "      <td>24m</td>\n",
+       "      <td>30m</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Kidney</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Hnf4a</td>\n",
+       "      <td>15.215368</td>\n",
+       "      <td>4.094030e-09</td>\n",
+       "      <td>1.557900e-04</td>\n",
+       "      <td>0.000230</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>P49698</td>\n",
+       "      <td>E9H7Y7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>2428</td>\n",
+       "      <td>3</td>\n",
+       "      <td>droplet</td>\n",
+       "      <td>3m</td>\n",
+       "      <td>24m</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Kidney</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Hnf4a</td>\n",
+       "      <td>-15.065793</td>\n",
+       "      <td>1.404470e-04</td>\n",
+       "      <td>4.094030e-09</td>\n",
+       "      <td>0.000258</td>\n",
+       "      <td>7.582662e-73</td>\n",
+       "      <td>P49698</td>\n",
+       "      <td>E9H7Y7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65</th>\n",
+       "      <td>5398</td>\n",
+       "      <td>15</td>\n",
+       "      <td>facs</td>\n",
+       "      <td>3m</td>\n",
+       "      <td>18m</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Liver</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Map4k1</td>\n",
+       "      <td>15.054170</td>\n",
+       "      <td>3.732086e-09</td>\n",
+       "      <td>1.270061e-04</td>\n",
+       "      <td>0.000393</td>\n",
+       "      <td>1.709817e-08</td>\n",
+       "      <td>P70218</td>\n",
+       "      <td>E9G8P2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <td>42689</td>\n",
+       "      <td>0</td>\n",
+       "      <td>facs</td>\n",
+       "      <td>3m</td>\n",
+       "      <td>24m</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Brain_Non-Myeloid</td>\n",
+       "      <td>Striatum</td>\n",
+       "      <td>oligodendrocyte</td>\n",
+       "      <td>Ppil2</td>\n",
+       "      <td>-14.671002</td>\n",
+       "      <td>9.562943e-05</td>\n",
+       "      <td>3.664892e-09</td>\n",
+       "      <td>0.000178</td>\n",
+       "      <td>2.025537e-15</td>\n",
+       "      <td>Q9D787</td>\n",
+       "      <td>E9H7X4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <td>42690</td>\n",
+       "      <td>1</td>\n",
+       "      <td>facs</td>\n",
+       "      <td>3m</td>\n",
+       "      <td>24m</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Brain_Non-Myeloid</td>\n",
+       "      <td>Striatum</td>\n",
+       "      <td>oligodendrocyte</td>\n",
+       "      <td>Aldh6a1</td>\n",
+       "      <td>-14.523355</td>\n",
+       "      <td>8.632671e-05</td>\n",
+       "      <td>3.664892e-09</td>\n",
+       "      <td>0.000160</td>\n",
+       "      <td>1.266913e-15</td>\n",
+       "      <td>Q9EQ20</td>\n",
+       "      <td>E9GHJ1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0  index  dataset start_age end_age     sex             tissue  \\\n",
+       "60       19245      5  droplet       24m     30m    male             Kidney   \n",
+       "64        2428      3  droplet        3m     24m    male             Kidney   \n",
+       "65        5398     15     facs        3m     18m  female              Liver   \n",
+       "82       42689      0     facs        3m     24m    male  Brain_Non-Myeloid   \n",
+       "92       42690      1     facs        3m     24m    male  Brain_Non-Myeloid   \n",
+       "\n",
+       "   subtissue cell_ontology_class     gene  fold_change_log2  \\\n",
+       "60       NaN                 NaN    Hnf4a         15.215368   \n",
+       "64       NaN                 NaN    Hnf4a        -15.065793   \n",
+       "65       NaN                 NaN   Map4k1         15.054170   \n",
+       "82  Striatum     oligodendrocyte    Ppil2        -14.671002   \n",
+       "92  Striatum     oligodendrocyte  Aldh6a1        -14.523355   \n",
+       "\n",
+       "    expression_at_start_age  expression_at_end_age  expression_max_std_dev  \\\n",
+       "60             4.094030e-09           1.557900e-04                0.000230   \n",
+       "64             1.404470e-04           4.094030e-09                0.000258   \n",
+       "65             3.732086e-09           1.270061e-04                0.000393   \n",
+       "82             9.562943e-05           3.664892e-09                0.000178   \n",
+       "92             8.632671e-05           3.664892e-09                0.000160   \n",
+       "\n",
+       "         p_value uniprot_mouse uniprot_daphnia  \n",
+       "60  0.000000e+00        P49698          E9H7Y7  \n",
+       "64  7.582662e-73        P49698          E9H7Y7  \n",
+       "65  1.709817e-08        P70218          E9G8P2  \n",
+       "82  2.025537e-15        Q9D787          E9H7X4  \n",
+       "92  1.266913e-15        Q9EQ20          E9GHJ1  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_merged[results_merged['uniprot_daphnia'].notnull()].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_merged.to_csv('./results/merged_augmented.csv')"
+   ]
   }
  ],
  "metadata": {
